# skin-guesser-back

./: Cargo.toml  Dockerfile  fly.toml
src/: main.rs
src/model/: database.rs  game.rs  mod.rs
src/routes/: game.rs  mod.rs  new_game.rs
src/services/: create_game.rs  hash.rs  image.rs  mod.rs
