[package]
name = "skin-guesser-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
base64 = "0.21.0"
chrono = "0.4.23"
dotenvy = "0.15.6"
env_logger = "0.10.0"
image = "0.24.5"
log = "0.4.17"
md5 = "0.7.0"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-actix-native-tls", "chrono"] }
